# pokecatcher-v2

./: .gitignore  Cargo.toml  config.json
apps/pokecatcher/: Cargo.toml
apps/pokecatcher/src/: configuration.rs  context.rs  main.rs  utils.rs
apps/pokecatcher/src/message_interface/: handle_message.rs  mod.rs  self_destruction.rs
apps/pokecatcher/src/pokemon/: mod.rs  utils.rs
crates/auth-handler/: Cargo.toml
crates/auth-handler/src/: lib.rs  token_retrival.rs
crates/config-handler/: Cargo.toml
crates/config-handler/src/: lib.rs  structs.rs
