[package]
name = "auth-handler"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

reqwest = { version = "0.12.22", default-features = false, features = ["http2", "native-tls"] }
twitch_oauth2 = { version = "0.15.1", features = ["reqwest"] }

config-handler = { path = "../config-handler" }
